# Vynth

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/vynth/: __init__.py  __main__.py  app.py  config.py
src/vynth/dsp/: adsr.py  base.py  chorus.py  delay.py  filter.py  formant.py  gain.py  granular.py  limiter.py  pitch_shift.py  reverb.py  time_stretch.py
src/vynth/engine/: audio_engine.py  export.py  midi_engine.py  midi_mapping.py  recorder.py  voice.py  voice_allocator.py
src/vynth/sampler/: sample.py  sample_editor.py  sample_manager.py
src/vynth/ui/: main_window.py  theme.py
src/vynth/ui/dialogs/: __init__.py  about_dialog.py  midi_controller_dialog.py  settings_dialog.py
src/vynth/ui/panels/: __init__.py  effects_rack.py  export_panel.py  mixer_panel.py  recorder_panel.py  sample_browser.py
src/vynth/ui/widgets/: __init__.py  adsr_display.py  fader.py  knob.py  led_meter.py  live_waveform_view.py  midi_keyboard.py  (+4 more)
src/vynth/utils/: audio_utils.py  ring_buffer.py  thread_safe_queue.py
tests/: conftest.py  test_audio_engine.py  test_audio_utils.py  test_command_queue.py  test_config.py  test_effects_bypass.py  test_export.py  test_midi_mapping.py  test_rendered_waveform.py  test_ring_buffer.py  test_sample_editor.py  test_sample_manager.py  test_session_save_load.py  test_voice.py  test_voice_allocator.py
tests/test_dsp/: test_adsr.py  test_base.py  test_chorus.py  test_delay.py  test_filter.py  test_formant.py  test_gain.py  test_granular.py  test_limiter.py  test_pitch_shift.py  test_reverb.py  test_time_stretch.py
